--- a/WMU102.ipynb
+++ b/WMU102.ipynb
@@ -6,7 +6,7 @@
       "name": "Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPgy++fbaO5oqmeugsmt61M",
+      "authorship_tag": "ABX9TyNVe2q8wTahsvP3bnsYMxEc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Aiman217/Aiman217/blob/main/Test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Aiman217/WMU102/blob/main/WMU102.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,18 +35,41 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y3jnB8hnTpQC",
-        "outputId": "ce9b3b3f-a59a-4d96-8f98-f18e102c25e2"
+        "outputId": "f5706a30-74b2-4e71-cf0c-b9a60bb6fdd8"
       },
       "source": [
         "print(\"Hello\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"It working\")"
+      ],
+      "metadata": {
+        "id": "DM1DCrO7hwFo",
+        "outputId": "488649d9-e5aa-4ede-a308-c2b47366bb5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It working\n"
           ]
         }
       ]
