--- a/WMU102.ipynb
+++ b/WMU102.ipynb
@@ -6,7 +6,7 @@
       "name": "Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVe2q8wTahsvP3bnsYMxEc",
+      "authorship_tag": "ABX9TyPMufhnLEmiRfum6+HS5ZVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,13 +40,36 @@
       "source": [
         "print(\"Hello\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"how to eat is fun\")"
+      ],
+      "metadata": {
+        "id": "aBk1t-nGmGpu",
+        "outputId": "f9a9f137-ecb2-4397-a8bb-541f25183b32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how to eat is fun\n"
           ]
         }
       ]
@@ -63,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
