--- a/WMU102_Project.ipynb
+++ b/WMU102_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WMU102_Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ4qU7y1NSnKEKKWlA3zgh",
+      "authorship_tag": "ABX9TyNa/k5sHzsVMRZx9qKLrvtp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**This is the project for course WMU102**"
+      ],
+      "metadata": {
+        "id": "mg9kxrdm2sHZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GNKWBhkjmx-Y",
-        "outputId": "27d31382-972d-4fdc-ea92-2333653a443e"
+        "outputId": "8a8a3442-c5d3-4061-d44b-acbbf82b25c3"
       },
       "outputs": [
         {
