--- a/WMU102_Project.ipynb
+++ b/WMU102_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WMU102_Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNa/k5sHzsVMRZx9qKLrvtp",
+      "authorship_tag": "ABX9TyM6eoykvb7XEpPXfe0dghlC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,25 +39,337 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "import pandas as pd\n",
+        "data = pd.read_csv('/content/gdrive/MyDrive/WMU102_Dataset/healthcare-dataset-stroke-data.csv')"
+      ],
+      "metadata": {
+        "id": "18J9io8Jiaf9"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data"
+      ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 424
         },
-        "id": "GNKWBhkjmx-Y",
-        "outputId": "8a8a3442-c5d3-4061-d44b-acbbf82b25c3"
+        "id": "SJwGFiAImwlY",
+        "outputId": "e9198bad-4367-4060-9638-c0350424ea69"
       },
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Testing\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-e8668b5e-fb72-44b5-a652-938e1acbd9f8\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>age</th>\n",
+              "      <th>hypertension</th>\n",
+              "      <th>heart_disease</th>\n",
+              "      <th>ever_married</th>\n",
+              "      <th>work_type</th>\n",
+              "      <th>Residence_type</th>\n",
+              "      <th>avg_glucose_level</th>\n",
+              "      <th>bmi</th>\n",
+              "      <th>smoking_status</th>\n",
+              "      <th>stroke</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>9046</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>67.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>Urban</td>\n",
+              "      <td>228.69</td>\n",
+              "      <td>36.6</td>\n",
+              "      <td>formerly smoked</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>51676</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>61.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Self-employed</td>\n",
+              "      <td>Rural</td>\n",
+              "      <td>202.21</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>31112</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>Rural</td>\n",
+              "      <td>105.92</td>\n",
+              "      <td>32.5</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>60182</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>49.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>Urban</td>\n",
+              "      <td>171.23</td>\n",
+              "      <td>34.4</td>\n",
+              "      <td>smokes</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1665</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>79.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Self-employed</td>\n",
+              "      <td>Rural</td>\n",
+              "      <td>174.12</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5105</th>\n",
+              "      <td>18234</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>Urban</td>\n",
+              "      <td>83.75</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5106</th>\n",
+              "      <td>44873</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>81.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Self-employed</td>\n",
+              "      <td>Urban</td>\n",
+              "      <td>125.20</td>\n",
+              "      <td>40.0</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5107</th>\n",
+              "      <td>19723</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Self-employed</td>\n",
+              "      <td>Rural</td>\n",
+              "      <td>82.99</td>\n",
+              "      <td>30.6</td>\n",
+              "      <td>never smoked</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5108</th>\n",
+              "      <td>37544</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>51.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>Rural</td>\n",
+              "      <td>166.29</td>\n",
+              "      <td>25.6</td>\n",
+              "      <td>formerly smoked</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5109</th>\n",
+              "      <td>44679</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>44.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Govt_job</td>\n",
+              "      <td>Urban</td>\n",
+              "      <td>85.28</td>\n",
+              "      <td>26.2</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5110 rows × 12 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8668b5e-fb72-44b5-a652-938e1acbd9f8')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-e8668b5e-fb72-44b5-a652-938e1acbd9f8 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-e8668b5e-fb72-44b5-a652-938e1acbd9f8');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "         id  gender   age  ...   bmi   smoking_status stroke\n",
+              "0      9046    Male  67.0  ...  36.6  formerly smoked      1\n",
+              "1     51676  Female  61.0  ...   NaN     never smoked      1\n",
+              "2     31112    Male  80.0  ...  32.5     never smoked      1\n",
+              "3     60182  Female  49.0  ...  34.4           smokes      1\n",
+              "4      1665  Female  79.0  ...  24.0     never smoked      1\n",
+              "...     ...     ...   ...  ...   ...              ...    ...\n",
+              "5105  18234  Female  80.0  ...   NaN     never smoked      0\n",
+              "5106  44873  Female  81.0  ...  40.0     never smoked      0\n",
+              "5107  19723  Female  35.0  ...  30.6     never smoked      0\n",
+              "5108  37544    Male  51.0  ...  25.6  formerly smoked      0\n",
+              "5109  44679  Female  44.0  ...  26.2          Unknown      0\n",
+              "\n",
+              "[5110 rows x 12 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
-      ],
-      "source": [
-        "print(\"Testing\")"
       ]
     }
   ]
