--- a/WMU102_Project.ipynb
+++ b/WMU102_Project.ipynb
@@ -74,7 +74,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data is taken from https://www.kaggle.com/fedesoriano/stroke-prediction-dataset/version/1\n"
+        "Dataset is taken from:\n",
+        "\n",
+        "\n",
+        "> fedesoriano. (2021, January). Stroke Prediction Dataset, Version 1. Retrieved December 29, 2021 from https://www.kaggle.com/fedesoriano/stroke-prediction-dataset/version/1.\n",
+        "\n"
       ],
       "metadata": {
         "id": "zjJeHRq1DuKP"
